--- a/index.html
+++ b/index.html
@@ -4,207 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🎟️ Cupons Promocionais - Descontos Exclusivos</title>
-  <meta name="description" content="Encontre cupons de desconto para Eletrônicos, Moda, Viagens, Casa, Beleza, Esportes e mais. Economize com códigos exclusivos válidos até 2025!">
-  <meta name="keywords" content="cupons de desconto, promoções, Amazon, Shopee, Eletrônicos, Moda, Viagens, Casa, Beleza, Black Friday 2025">
+  <meta name="description" content="Encontre cupons de desconto para Eletrônicos, Moda, Viagens, Casa, Beleza e mais. Economize com códigos promocionais válidos até 2025!">
+  <meta name="keywords" content="cupons de desconto, promoções, Eletrônicos, Moda, Viagens, Casa, Beleza, Black Friday 2025">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Seu Nome">
   <link rel="icon" type="image/png" href="logos/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Roboto', Arial, sans-serif;
-      background: #f4f4f9;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header {
-      background: #1e3a8a;
-      color: white;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-
-    header h1 {
-      font-size: 2.2em;
-      margin-bottom: 10px;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    nav ul li a:hover {
-      color: #ff9800;
-    }
-
-    .cupons-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 30px 20px;
-      text-align: center;
-    }
-
-    .cupons-container h1 {
-      font-size: 2em;
-      margin-bottom: 15px;
-      color: #1e3a8a;
-    }
-
-    .cupons-container p {
-      font-size: 1.1em;
-      margin-bottom: 20px;
-      color: #555;
-    }
-
-    .categorias-filtro {
-      margin-bottom: 30px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-    }
-
-    .categorias-filtro button {
-      background: #e0e0e0;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 14px;
-      transition: background 0.3s;
-    }
-
-    .categorias-filtro button.active, .categorias-filtro button:hover {
-      background: #ff9800;
-      color: white;
-    }
-
-    .cupons-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-    }
-
-    .cupom-card {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: transform 0.3s;
-      display: none;
-    }
-
-    .cupom-card.active {
-      display: block;
-    }
-
-    .cupom-card:hover {
-      transform: translateY(-5px);
-    }
-
-    .cupom-card img {
-      max-width: 100px;
-      height: auto;
-      margin-bottom: 15px;
-    }
-
-    .cupom-codigo {
-      background: #ff9800;
-      color: white;
-      font-weight: bold;
-      padding: 10px;
-      border-radius: 6px;
-      font-size: 16px;
-      margin-bottom: 15px;
-      display: inline-block;
-    }
-
-    .btn-copiar {
-      background: #25d366;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 500;
-      transition: background 0.3s;
-    }
-
-    .btn-copiar:hover {
-      background: #1ebe5c;
-    }
-
-    .validade {
-      font-size: 0.9em;
-      color: #666;
-      margin-top: 10px;
-    }
-
-    footer {
-      background: #1e3a8a;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-
-    footer ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
-
-    footer ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    footer ul li a:hover {
-      color: #ff9800;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Roboto', Arial, sans-serif; background: #f4f4f9; color: #333; line-height: 1.6; }
+    header { background: #1e3a8a; color: white; padding: 20px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    header h1 { font-size: 2.2em; margin-bottom: 10px; }
+    nav ul { list-style: none; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; }
+    nav ul li a { color: white; text-decoration: none; font-weight: 500; transition: color 0.3s; }
+    nav ul li a:hover { color: #ff9800; }
+    .cupons-container { max-width: 1200px; margin: 0 auto; padding: 30px 20px; text-align: center; }
+    .cupons-container h1 { font-size: 2em; margin-bottom: 15px; color: #1e3a8a; }
+    .cupons-container p { font-size: 1.1em; margin-bottom: 20px; color: #555; }
+    .categorias-filtro { margin-bottom: 30px; display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
+    .categorias-filtro button { background: #e0e0e0; border: none; padding: 10px 20px; border-radius: 6px; cursor: pointer; font-size: 14px; transition: background 0.3s; }
+    .categorias-filtro button.active, .categorias-filtro button:hover { background: #ff9800; color: white; }
+    .cupons-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; }
+    .cupom-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: center; transition: transform 0.3s; display: none; }
+    .cupom-card.active { display: block; }
+    .cupom-card:hover { transform: translateY(-5px); }
+    .cupom-card img { max-width: 100px; height: auto; margin-bottom: 15px; }
+    .cupom-codigo { background: #ff9800; color: white; font-weight: bold; padding: 10px; border-radius: 6px; font-size: 16px; margin-bottom: 15px; display: inline-block; }
+    .btn-copiar { background: #25d366; color: white; border: none; padding: 10px 20px; border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: 500; transition: background 0.3s; }
+    .btn-copiar:hover { background: #1ebe5c; }
+    .validade { font-size: 0.9em; color: #666; margin-top: 10px; }
+    .ad-banner { margin: 20px auto; max-width: 728px; text-align: center; background: #f0f0f0; padding: 10px; border-radius: 6px; }
+    footer { background: #1e3a8a; color: white; text-align: center; padding: 20px; margin-top: 40px; }
+    footer ul { list-style: none; display: flex; justify-content: center; gap: 20px; margin-top: 10px; }
+    footer ul li a { color: white; text-decoration: none; font-weight: 500; }
+    footer ul li a:hover { color: #ff9800; }
     @media (max-width: 600px) {
-      .cupons-grid {
-        grid-template-columns: 1fr;
-      }
-
-      header h1 {
-        font-size: 1.8em;
-      }
-
-      nav ul {
-        flex-direction: column;
-        gap: 10px;
-      }
-
-      .categorias-filtro button {
-        width: 45%;
-        margin: 5px;
-      }
+      .cupons-grid { grid-template-columns: 1fr; }
+      header h1 { font-size: 1.8em; }
+      nav ul { flex-direction: column; gap: 10px; }
+      .categorias-filtro button { width: 45%; margin: 5px; }
     }
   </style>
 </head>
@@ -222,6 +60,11 @@
       </ul>
     </nav>
   </header>
+
+  <!-- Placeholder para Google Ads (728x90) -->
+  <div class="ad-banner">
+    <p>[Espaço para Google Ads - 728x90]</p>
+  </div>
 
   <!-- Conteúdo principal -->
   <main class="cupons-container">
@@ -241,9 +84,24 @@
       <button onclick="filtrarCupons('infantil')">Infantil</button>
       <button onclick="filtrarCupons('pets')">Pets</button>
       <button onclick="filtrarCupons('servicos')">Serviços</button>
+      <button onclick="filtrarCupons('automotivo')">Automotivo</button>
+      <button onclick="filtrarCupons('jogos')">Jogos</button>
+      <button onclick="filtrarCupons('eletrodomesticos')">Eletrodomésticos</button>
+      <button onclick="filtrarCupons('moveis')">Móveis</button>
+      <button onclick="filtrarCupons('telefonia')">Telefonia</button>
+      <button onclick="filtrarCupons('educacao')">Educação</button>
+      <button onclick="filtrarCupons('entretenimento')">Entretenimento</button>
+      <button onclick="filtrarCupons('ferramentas')">Ferramentas</button>
     </div>
-    <div class="cupons-grid" id="cupons-grid"></div>
+    <div class="cupons-grid" id="cupons-grid">
+      <!-- Cupons serão adicionados dinamicamente via JavaScript ou WordPress -->
+    </div>
   </main>
+
+  <!-- Placeholder para Google Ads (300x250) -->
+  <div class="ad-banner">
+    <p>[Espaço para Google Ads - 300x250]</p>
+  </div>
 
   <!-- Rodapé -->
   <footer>
@@ -255,66 +113,27 @@
   </footer>
 
   <script>
-    // Array de cupons com mais categorias
-    const cupons = [
-      { id: 'cupom1', loja: 'Amazon', codigo: 'AMAZON10', imagem: 'logos/amazon.png', link: 'https://seusite.com/cupom-amazon', validade: '2025-12-31', categoria: 'eletronicos' },
-      { id: 'cupom2', loja: 'Shopee', codigo: 'DESCONTO10', imagem: 'logos/shopee.png', link: 'https://seusite.com/cupom-shopee', validade: '2025-08-15', categoria: 'eletronicos' },
-      { id: 'cupom3', loja: 'Magalu', codigo: 'MAGALU15', imagem: 'logos/magalu.png', link: 'https://seusite.com/cupom-magalu', validade: '2025-11-30', categoria: 'eletronicos' },
-      { id: 'cupom4', loja: 'Mercado Livre', codigo: 'MERCADO20', imagem: 'logos/mercadolivre.jpg', link: 'https://seusite.com/cupom-mercadolivre', validade: '2025-12-20', categoria: 'eletronicos' },
-      { id: 'cupom5', loja: 'Shein', codigo: 'SHEIN25', imagem: 'logos/shein.png', link: 'https://seusite.com/cupom-shein', validade: '2025-09-10', categoria: 'moda' },
-      { id: 'cupom6', loja: 'AliExpress', codigo: 'ALIEX10', imagem: 'logos/aliexpress.png', link: 'https://seusite.com/cupom-aliexpress', validade: '2025-10-31', categoria: 'moda' },
-      { id: 'cupom7', loja: 'Decolar', codigo: 'VIAGEM15', imagem: 'logos/decolar.png', link: 'https://seusite.com/cupom-decolar', validade: '2025-09-30', categoria: 'viagens' },
-      { id: 'cupom8', loja: 'Americanas', codigo: 'CASA10', imagem: 'logos/americanas.png', link: 'https://seusite.com/cupom-americanas', validade: '2025-10-15', categoria: 'casa' },
-      { id: 'cupom9', loja: 'Natura', codigo: 'NATURA20', imagem: 'logos/natura.png', link: 'https://seusite.com/cupom-natura', validade: '2025-11-10', categoria: 'beleza' },
-      { id: 'cupom10', loja: 'Decathlon', codigo: 'ESPORTE15', imagem: 'logos/decathlon.png', link: 'https://seusite.com/cupom-decathlon', validade: '2025-12-01', categoria: 'esportes' },
-      { id: 'cupom11', loja: 'Livraria Cultura', codigo: 'LIVRO10', imagem: 'logos/cultura.png', link: 'https://seusite.com/cupom-cultura', validade: '2025-09-20', categoria: 'livros' },
-      { id: 'cupom12', loja: 'iFood', codigo: 'IFOOD5', imagem: 'logos/ifood.png', link: 'https://seusite.com/cupom-ifood', validade: '2025-08-31', categoria: 'alimentos' },
-      { id: 'cupom13', loja: 'Drogasil', codigo: 'SAUDE10', imagem: 'logos/drogasil.png', link: 'https://seusite.com/cupom-drogasil', validade: '2025-10-20', categoria: 'saude' },
-      { id: 'cupom14', loja: 'Ri Happy', codigo: 'INFANTIL15', imagem: 'logos/rihappy.png', link: 'https://seusite.com/cupom-rihappy', validade: '2025-11-15', categoria: 'infantil' },
-      { id: 'cupom15', loja: 'Petz', codigo: 'PETS10', imagem: 'logos/petz.png', link: 'https://seusite.com/cupom-petz', validade: '2025-12-10', categoria: 'pets' },
-      { id: 'cupom16', loja: 'Uber', codigo: 'UBER5', imagem: 'logos/uber.png', link: 'https://seusite.com/cupom-uber', validade: '2025-09-15', categoria: 'servicos' }
-    ];
-
-    // Função para verificar se o cupom está válido
-    function isCupomValido(validade) {
-      const hoje = new Date();
-      const dataValidade = new Date(validade + 'T23:59:59');
-      return hoje <= dataValidade;
-    }
-
-    // Função para renderizar os cupons
+    // Função para renderizar cupons (placeholder, será preenchido no WordPress)
     function renderizarCupons(categoria = 'todos') {
       const grid = document.getElementById('cupons-grid');
-      grid.innerHTML = '';
-
-      cupons.forEach(cupom => {
-        if (isCupomValido(cupom.validade) && (categoria === 'todos' || cupom.categoria === categoria)) {
-          const cupomCard = document.createElement('div');
-          cupomCard.className = `cupom-card ${cupom.categoria} active`;
-          cupomCard.innerHTML = `
-            <img src="${cupom.imagem}" alt="${cupom.loja}">
-            <div class="cupom-codigo" id="${cupom.id}">${cupom.codigo}</div>
-            <p class="validade">Válido até: ${cupom.validade.split('-').reverse().join('/')}</p>
-            <a href="${cupom.link}" target="_blank" rel="nofollow" class="btn-copiar" onclick="copiarCupom('${cupom.id}')">Copiar Cupom</a>
-          `;
-          grid.appendChild(cupomCard);
-        }
-      });
+      grid.innerHTML = '<p>Aguardando cupons para exibir...</p>'; // Placeholder
     }
 
-    // Função para copiar cupom
+    // Função para copiar cupom (pronta para uso futura)
     function copiarCupom(cupomId) {
       const cupom = document.getElementById(cupomId);
-      const range = document.createRange();
-      range.selectNode(cupom);
-      window.getSelection().removeAllRanges();
-      window.getSelection().addRange(range);
-      document.execCommand('copy');
-      window.getSelection().removeAllRanges();
-      alert('Cupom copiado: ' + cupom.innerText);
+      if (cupom) {
+        const range = document.createRange();
+        range.selectNode(cupom);
+        window.getSelection().removeAllRanges();
+        window.getSelection().addRange(range);
+        document.execCommand('copy');
+        window.getSelection().removeAllRanges();
+        alert('Cupom copiado: ' + cupom.innerText);
+      }
     }
 
-    // Função para filtrar cupons por categoria
+    // Função para filtrar cupons por categoria (pronta para uso futura)
     function filtrarCupons(categoria) {
       renderizarCupons(categoria);
       const botoes = document.querySelectorAll('.categorias-filtro button');
@@ -322,7 +141,7 @@
       document.querySelector(`button[onclick="filtrarCupons('${categoria}')"]`).classList.add('active');
     }
 
-    // Renderiza os cupons ao carregar a página
+    // Inicializa a página
     renderizarCupons();
   </script>
 </body>
