--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <script>
     const PLANILHA_ID = '1cQOP4Tpu-9lq1aG6FPNFTmO4C1E1WixGKlMXx_ybzR0'; // seu ID da planilha
-    const ABA = 'Cupons';
+    const ABA = 'Produtos';
 
     fetch(`https://opensheet.vercel.app/${PLANILHA_ID}/${ABA}`)
       .then(res => res.json())
