--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -84,6 +84,6 @@
         </div>
         <div id="admin-products-grid" class="products-grid"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="admin-script.js"></script>
 </body>
 </html>
